# Ecommerce_backend_django

./: .gitignore  db.sqlite3  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
category/: admin.py  models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_alter_category_options.py  0002_category_created_at.py  0003_alter_category_created_at.py
ecommerce/: settings.py  urls.py  views.py
store/: admin.py  models.py  serializers.py  views.py
store/migrations/: 0001_initial.py
templates/: home.html
